# turin-qabul

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: django.yml
turin_qabul/: .pre-commit-config.yaml  entrypoint.dev.sh  requirements.txt
turin_qabul/admission/: admin.py  choices.py  models.py  urls.py
turin_qabul/admission/api_endpoints/AdmissionCreate/: serializers.py  views.py
turin_qabul/admission/migrations/: 0001_initial.py
turin_qabul/config/: settings.py  urls.py
turin_qabul/pay/: urls.py  views.py
turin_qabul/pay/click/: paylink.py  views.py
turin_qabul/pay/migrations/: 0001_initial.py  0002_delete_order.py
turin_qabul/payment/: admin.py  models.py  urls.py
turin_qabul/payment/migrations/: 0001_initial.py
turin_qabul/payment/payment_types/click/: auth.py  provider.py  views.py
turin_qabul/payment/payment_types/click/Complete/: serializers.py  views.py
turin_qabul/payment/payment_types/click/Prepare/: serializers.py  views.py
