[tool.poetry]
name = "turin-qabul"
version = "0.1.0"
description = ""
authors = ["Samandar-Komilov <komilov.samandar07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
