[tool.poetry]
name = "turin-qabul"
version = "0.1.0"
description = ""
authors = ["Samandar-Komilov <komilov.samandar07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
django-payments = "^3.0.1"
gunicorn = "^23.0.0"
djangorestframework = "^3.15.2"
django-jazzmin = "^3.0.1"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
